nav a colour change

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
 .navbar a {
     margin-right: 50px;
     font-size: 25px;
-    color: rgb(228, 12, 12);
+    color: white;
     text-decoration: none;
 }
 
