--- a/css/main.css
+++ b/css/main.css
@@ -1,180 +1,513 @@
+
+
 * {
-    padding: 0%;
-    margin: 0%;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    scroll-behavior: smooth;
     font-family: sans-serif;
 }
 
-
-body {
-    overflow-x: hidden;
+:root {
+    --bg-color: #2a2a2a;
+    --second-bg-color: #202020;
+    --text-color: #fff;
+    --second-color: #ccc;
+    --main-color: #05b4ff;
+    --big-font: 5rem;
+    --h2-font: 3rem;
+    --p-font: 1.1rem;
 }
 
-/* homeContainer */
-
-.home-Container {
-    display: grid;
-    grid-template-rows: 7% 93%;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
+body {
+    background: var(--bg-color);
+    color: var(--text-color);
 }
 
 /* header */
 
-.header {
-    background-color: #2D2D2D;
-    width: 100%;
-    height: 7%;
+header {
     position: fixed;
-    display: flex;
-    justify-content: flex-end;
-    z-index: 5;
-}
-
-.navbar {
-    margin-right: 50px;
-    margin-top: 24px;
-}
-
-.navbar a {
-    margin-right: 50px;
-    font-size: 25px;
-    color: white;
-    text-decoration: none;
-}
-
-a:hover {
-
-    color: #09C2DD;
-}
-
-#home {
-    background-color: #336699;
-}
-
-
-
-
-
-
-/* homemain */
-
-.home-Container {
-    background-image: url(../assets/images/img\ 01.jpg);
-
-}
-
-.homeMain {
-    position: relative;
-    top: 450px;
-    left: 250px;
-    width: 30%;
-}
-
-.homeMain h1 {
-    color: #09C2DD;
-    font-size: 90px;
-}
-
-.homeMain h3 {
-    color: white;
-    position: relative;
-    font-size: 40px;
-}
-
-
-
-
-
-/* aboutmain */
-
-.about-Container {
-    background-color: black;
-    width: 100VW;
-    height: 100VH;
-    display: grid;
-    grid-template-columns: 50% 49%;
-}
-
-.headline {
-    color: #09C2DD;
-    font-size: 40px;
-    position: relative;
-    left: 100px;
-    top: 190px;
-    text-decoration: underline white;
-}
-
-.aboutProfile {
-    width: 700px;
-    height: 900px;
-    position: relative;
-    top: 160px;
-    left: 150px;
-    overflow-y: hidden;
-
-}
-
-.aboutProfile img {
     width: 100%;
-    height: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background:#2D2D2D;
+    padding: 22px 15%;
+    border-bottom: 1px solid transparent;
+    transition: all .45s ease;
 }
 
-.myDetails h4 {
-    color: white;
+.logo {
+    color: var(--text-color);
+    font-size: 35px;
+    font-weight: 700;
+    letter-spacing: 1px;
     position: relative;
-    left: 270px;
-    top: 370px;
-    font-size: 50px;
-    margin-bottom: 30px;
+    right: 400px;
+}
+
+span {
+    color: var(--main-color);
+}
+
+.navList {
+    display: flex;
+    position: relative;
+    left: 450px;
+    
+
+}
+
+.navList a {
+    color: var(--second-color);
+    font-size: 17px;
+    font-weight: 500;
+    margin: 0 25px;
+    transition: all .45s ease;
 }
 
 
+.navList a:hover {
+    color: var(--main-color);
+}
 
+.navList a:hover,
+.navList a.active{
+    color:var(--main-color);
+}
 
+#menu-icon {
+    font-size: 35px;
+    color: var(--text-color);
+    z-index: 1000;
+    cursor: pointer;
+    margin-left: 25px;
+    display: none;
+}
 
-/* skill */
+section {
+    padding: 160px 15% 120px;
+}
 
-.skill-Container {
+/*--------- home section --------------*/
+
+.home {
+    position: relative;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-image: url(../assets/images/img\ 01.jpg);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: start;
 }
 
-.skills-Content {
-    color: white;
+.slide {
+    margin-bottom: 20px;
+}
+
+.one {
+    display: inline-block;
+    margin-right: 15px;
+    padding: 0 15px;
+    line-height: 32px;
+    font-size: 28px;
+    font-weight: 500;
+    border-radius: 5px;
+    background: var(--main-color);
+    color: var(--text-color);
+
+}
+
+.two {
+    display: inline-block;
+    color: var(--second-color);
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.nam {
+    font-size: var(--big-font);
+    font-weight: 700;
+    color: var(--text-color);
+    line-height: 1.1;
+    margin: 0 0 8px;
+
+}
+
+.home-text h3 {
+    color: var(--text-color);
+    margin: 0 0 35px;
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1.1;
+}
+
+.home-text p {
+    color: var(--second-color);
+    font-size: var(--p-font);
+    line-height: 1.8;
+    margin-bottom: 40px;
+}
+
+.button {
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    top: 370px;
-    left: 300px;
-    font-size: 50px;
+    top: 200px;
+    right: 425px;
 }
 
-.skill-list {
-    margin-bottom: 30px;
+.btn {
+    display: inline-block;
+    padding: 12px;
+    background-color: var(--main-color);
+    border-radius: 5px;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    transition: all .45s ease;
+    color: var(--text-color);
 }
 
+.btn:hover {
+    transform: scale(0.9);
+}
 
-
-
-
-/* contact  */
-
-
-.contact-Container {
-    background-image: url(../assets/images/img\ 01.jpg);
-    width: 100vw;
+/* -----------About Section---------- */
+.about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 1.5rem;
     height: 100vh;
 }
 
-.contact-Container h3 {
-    color: aliceblue;
+.about-img img {
+    max-width: 400px;
+    height: auto;
+    width: 100%;
+    border: 2px var(--main-color) solid;
+    border-radius: 600px;
+
 }
 
-.contact-Details {
-    color: white;
-    position: relative;
-    left: 270px;
-    top: 370px;
-    font-size: 50px;
-    margin-bottom: 30px;
+.about-img img:hover{
+    transform: scale(1.1);
+    cursor: pointer;
 }
+
+.about-text h2 {
+    font-size: var(--h2-font);
+    line-height: 1;
+}
+
+.about-text h4 {
+    font-size: 24px;
+    font-weight: 600;
+    color: var(--text-color);
+    line-height: 1.7;
+    margin: 15px 0 30px;
+}
+
+.about-text p {
+    color: var(--second-color);
+    font-size: var(--p-font);
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 1.8;
+    margin-bottom: 4rem;
+}
+
+.fssa{
+    color: var(--main-color);
+    font-size:30px;
+    font-family:'Times New Roman', Times, serif;
+    position: relative;
+    bottom: 50px;
+    left: 70px;
+}
+
+#about .btn {
+    width: 120px;
+    position: relative;
+    top: -40px;
+    left: 530px;
+}
+
+/*------- skills section -------*/
+
+#skills {
+    background-image: url(../assets/images/img\ 01.jpg);
+    background-size: cover;
+    background-position: center;
+    height:100vh;
+    width: 100%;
+}
+
+.skills h2{
+    font-size: var(--h2-font);
+    line-height: 1;
+    position: relative;
+    right: 150px;
+    bottom: 40px;
+}
+
+.coding-content{
+    position: relative;
+    right: 150px;
+   
+}
+
+.photo-editing-content{
+    position: relative;
+    top: 80px;
+    right: 150px;
+}
+
+
+.coding-content img { 
+   width: 130px;
+   height: 130px;
+   margin:10px;
+
+}
+
+.coding-content img:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+
+
+
+
+.photo-editing-content img{
+    width: 130px;
+   height: 130px;
+   margin:10px;
+   transition: all .45s ease;
+}
+
+.photo-editing-content img:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.skills h4{
+    font-size: 30px;
+    font-weight: 600;
+    color: var(--text-color);
+   
+    
+}
+
+.coding{
+    position: relative;
+    right: 150px;
+}
+
+.editing{
+    position: relative;
+    right: 150px;
+    top: 200px;
+}
+
+.skills .btn{
+    position: relative;
+    top: 130px;
+    left: 40px;
+}
+
+/* -------contact section-------- */
+
+.contact{
+    background: var(--second-bg-color);
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    gap: 2.5rem;
+    height: 100vh;
+}
+
+#contact-me{
+    font-size: 4em;    
+    position: absolute;
+    top: 320vh;
+}
+
+#hint{
+    position: absolute;
+    top: 329vh;
+    left: 16vw;
+    line-height: 25px;
+}
+#hint h4{
+    font-size: 1.3em;
+    position: relative;
+    right: 10px;
+}
+
+
+.cnt{
+    font-size: 15px;
+    position: relative;
+    right: 10px;
+}
+
+.list{
+    margin-bottom: 2.8rem;
+    position: relative;
+    top: 10px;
+    right: 10px;
+}
+
+.list li{
+    margin-bottom: 12px;
+}
+
+.list li a{
+    display: block;
+    color: var(--second-color);
+    font-size: 20px;
+    transition: all .45s ease;
+}
+
+.list li a:hover{
+    color: var(--main-color);
+    transform: translateY(5px);
+}
+.contact-icons{
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+}
+.contact-icons i{
+    height: 45px;
+    width: 45px;
+   
+    color: var(--text-color);
+    font-size: 40px;
+    
+    border-radius: 8px;
+    margin-right: 13px;
+    transition: all .45s ease ;
+
+}
+.contact-icons i:hover{
+    color: var(--main-color);
+    transform: scale(1.3);
+    cursor: pointer;
+    /* background: var(--text-color); */
+
+}
+
+.contact-form form input,form textarea{
+    width: 100%;
+    padding: 14px;
+    background: var(--bg-color);
+    color: var(--text-color);
+    border: none;
+    /* outline: none; */
+    font-size: 15px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+
+}
+
+.contact-form textarea{
+    resize: none;
+    height: 240px;
+}
+
+.contact-form .submit{
+    display: inline-block;
+    font-size: 16px;
+    background: var(--main-color);
+    color: var(--text-color);
+    width: 160px;
+    transition: all .45s ease;
+}
+
+.contact-form .submit:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+
+/* prooject page */
+
+
+
+ /* Container for images */
+ .edit-collection h1{
+    font-size: 3rem;
+    position: relative;
+    bottom: 80px;
+    right: 100px;
+    font-family:'Times New Roman', Times, serif;
+ }
+
+
+.project-container {
+    background-image: url(../assets/images/prj\ bg.jpg);
+    background-size: cover;
+    width: 100%;
+    height:100vh;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;  
+    align-items: center;      
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+
+.edit-collection {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;  
+    justify-content: center; 
+}
+
+
+.edit-img {
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 300px;
+    border-radius: 20px;  
+    overflow: hidden; 
+    box-shadow: 0 4px 8px rgba(0, 0, 40, 40); 
+    transition: transform 0.9s , box-shadow 0.3s ease;
+}
+
+
+.edit-img img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: inherit; 
+}
+
+
+.edit-img:hover {
+    transform: scale(1.35); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.edit-collection .button{
+    position: absolute;
+    margin-top: 550px;
+    left: 100px;
+}
+
+
+
+
