--- a/css/main.css
+++ b/css/main.css
@@ -451,7 +451,8 @@ section {
     font-size: 3rem;
     position: relative;
     bottom: 80px;
-    right: 100px;
+    right: 80pxx;
+
     font-family:'Times New Roman', Times, serif;
  }
 
